--- a/menu-editor.html
+++ b/menu-editor.html
@@ -449,20 +449,10 @@
                            name="csvFile" 
                            accept=".csv"
                            aria-describedby="csv-help">
-                    <span id="csv-help" class="help-text">Upload the menu CSV file if available</span>
+                    <span id="csv-help" class="help-text">Upload the menu CSV file - JSON will be auto-generated from this</span>
                     <div id="csv-preview" class="file-preview" hidden></div>
                 </div>
                 
-                <div class="form-group">
-                    <label for="json-upload">JSON File Upload</label>
-                    <input type="file" 
-                           id="json-upload" 
-                           name="jsonFile" 
-                           accept=".json"
-                           aria-describedby="json-help">
-                    <span id="json-help" class="help-text">Upload the menu JSON file if already created (optional - will be auto-generated from CSV)</span>
-                    <div id="json-preview" class="file-preview" hidden></div>
-                </div>
                 
                 <fieldset class="form-group">
                     <legend class="required">Status</legend>
