--- a/menu-editor.html
+++ b/menu-editor.html
@@ -132,8 +132,8 @@
                            id="phone" 
                            name="phoneNumber" 
                            autocomplete="tel"
-                           placeholder="(555) 555-5555">
-                    <span class="help-text">Format: (555) 555-5555</span>
+                           placeholder="+1 (555) 555-5555">
+                    <span class="help-text">Format: +1 (555) 555-5555</span>
                 </div>
                 
                 <div class="form-group">
@@ -142,7 +142,7 @@
                               name="hours" 
                               rows="4"
                               placeholder="Mon-Fri: 11am-10pm&#10;Sat-Sun: 10am-11pm"></textarea>
-                    <span class="help-text">Operating hours - one line per day or special notes</span>
+                    <span class="help-text">Operating hours - one line per day or special notes. <br>Example:Mon-Fri: 11am-10pm <br>Sat-Sun: 10am-11pm</span>
                 </div>
             </section>
             
