--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
 
     <!-- HERO BANNER -->
     <section class="hero-banner" aria-label="Welcome banner">
-        <img src="Site_a11yBanner.png" alt="Menus 4 ALL logo with a lady with a delightful huge smile looking at her phone with a friend equally delighted looking at her" class="hero-banner-image">
+        <img src="site_a11ybanner.png" alt="Menus 4 ALL logo with a lady with a delightful huge smile looking at her phone with a friend equally delighted looking at her" class="hero-banner-image">
         <div class="hero-overlay">
         </div>
     </section>
