--- a/menu-editor.html
+++ b/menu-editor.html
@@ -167,7 +167,7 @@
             </h1>
             <nav aria-label="Breadcrumb">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Dashboard</a></li>
+                    <li><a href="https://helenmenus4all.github.io/menus4all-staging/">Dashboard</a></li>
                     <li aria-current="page">Menu Editor</li>
                 </ol>
             </nav>
@@ -649,7 +649,7 @@
             <a href="https://www.moderntechnology4theblind.org">Modern Technology for the Blind</a> | 
             Menus4ALL &copy; 2024
         </p>
-        <p><a href="index.html">Back to Dashboard</a></p>
+        <p><a href="https://helenmenus4all.github.io/menus4all-staging/">Back to Dashboard</a></p>
     </footer>
     
     <!-- Scripts -->
