--- a/menu-tracker.html
+++ b/menu-tracker.html
@@ -283,8 +283,8 @@
         <div id="menuList" class="menu-list"></div>
     </div>
     
-    <script src="https://www.gstatic.com/firebasejs/9.x/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     
     <script>
         // Firebase configuration for STAGING database (dashboard tracking)
